# adv-makefile

./: .gitignore  README.md
autobuild-version/example/: README.md
autobuild-version/example/build-exe/: Makefile.am  README.md  configure.ac
autobuild-version/example/build-exe/src/: Makefile.am  main.c
autobuild-version/example/hierarchical-makefiles/: Makefile.am  README.md  configure.ac
autobuild-version/example/hierarchical-makefiles/sw/: Makefile.am
autobuild-version/example/hierarchical-makefiles/sw/algorithm/: Makefile.am
autobuild-version/example/hierarchical-makefiles/sw/algorithm/if/: algorithmHandlerIf.h  algorithmManagerIf.h
autobuild-version/example/hierarchical-makefiles/sw/algorithm/inc/: algorithmHandler.h  algorithmManager.h
autobuild-version/example/hierarchical-makefiles/sw/algorithm/src/: algorithmHandler.cc  algorithmManager.cc
autobuild-version/example/hierarchical-makefiles/sw/algorithm/unitTest/: algorithmHandlerTest.cc  algorithmManagerTest.cc
autobuild-version/example/hierarchical-makefiles/sw/control/: Makefile.am
autobuild-version/example/hierarchical-makefiles/sw/control/if/: controlHandlerIf.h  controlManagerIf.h
autobuild-version/example/hierarchical-makefiles/sw/control/inc/: controlHandler.h  controlManager.h
autobuild-version/example/hierarchical-makefiles/sw/control/src/: controlHandler.cc  controlManager.cc
autobuild-version/example/hierarchical-makefiles/sw/control/unitTest/: controlHandlerTest.cc  controlManagerTest.cc
autobuild-version/example/hierarchical-makefiles/sw/rx/: Makefile.am
autobuild-version/example/hierarchical-makefiles/sw/rx/if/: rxHandlerIf.h  rxManagerIf.h
autobuild-version/example/hierarchical-makefiles/sw/rx/inc/: rxHandler.h  rxManager.h
autobuild-version/example/hierarchical-makefiles/sw/rx/src/: rxHandler.cc  rxManager.cc
autobuild-version/example/hierarchical-makefiles/sw/rx/unitTest/: rxHandlerTest.cc  rxManagerTest.cc
autobuild-version/example/hierarchical-makefiles/sw/startup/: Makefile.am
autobuild-version/example/hierarchical-makefiles/sw/startup/if/: startupHandlerIf.h  startupManagerIf.h
autobuild-version/example/hierarchical-makefiles/sw/startup/inc/: startupHandler.h  startupManager.h
autobuild-version/example/hierarchical-makefiles/sw/startup/src/: startupHandler.cc  startupManager.cc
autobuild-version/example/hierarchical-makefiles/sw/startup/unitTest/: startupHandlerTest.cc  startupManagerTest.cc
autobuild-version/example/hierarchical-makefiles/sw/tx/: Makefile.am
autobuild-version/example/hierarchical-makefiles/sw/tx/if/: txHandlerIf.h  txManagerIf.h
autobuild-version/example/hierarchical-makefiles/sw/tx/inc/: txHandler.h  txManager.h
autobuild-version/example/hierarchical-makefiles/sw/tx/src/: txHandler.cc  txManager.cc
autobuild-version/example/hierarchical-makefiles/sw/tx/unitTest/: txHandlerTest.cc  txManagerTest.cc
autobuild-version/example/simple-example/: Makefile.am  README.md  configure.ac  main.cc  target1.cc  target1.h  target2.cc  target2.h  targetIf.h
make-version/sw/app/commonUtils/inc/: nonCopyable.h
make-version/sw/app/main/: Makefile  main.cc
make-version/sw/app/module1/: Makefile
make-version/sw/app/module1/moduleIf/: README.md
make-version/sw/app/module1/moduleIf/if/: module1Callbacks.h  module1Enums.h  module1If.h
make-version/sw/app/module1/moduleIf/inc/: module1.h
make-version/sw/app/module1/moduleIf/src/: Makefile  module1.cc  module1SomeOtherSrcFiles.cc
make-version/sw/app/module1/moduleIf/unitTest/: testModule1If.cc  testModuleIf.mk
make-version/sw/app/module1/service/clockConfigService/if/: clockConfigSrvIf.cc  clockConfigSrvIf.h
make-version/sw/app/module1/service/clockConfigService/inc/: clockConfigSrvTarget1.h
make-version/sw/app/module1/service/clockConfigService/src/: Makefile  clockConfigSrv.cc
make-version/sw/app/module1/service/clockConfigService/unitTest/: testClockConfigSrv.cc  testClockConfigSrv.mk
make-version/sw/app/module1/service/memoryProtectService/if/: memoryProtectSrvIf.cc  memoryProtectSrvIf.h
make-version/sw/app/module1/service/memoryProtectService/inc/: memoryProtectSrv.h
make-version/sw/app/module1/service/memoryProtectService/src/: Makefile  memoryProtectSrv.cc
make-version/sw/app/module1/service/memoryProtectService/unitTest/: testMemoryProtectSrv.cc  testMemoryProtectSrv.mk
make-version/sw/app/module1/serviceControl/module1CompensationCtrl/if/: module1CompensationCtrlIf.cc  module1CompensationCtrlIf.h
make-version/sw/app/module1/serviceControl/module1CompensationCtrl/inc/: module1CompensationCtrl.h
make-version/sw/app/module1/serviceControl/module1CompensationCtrl/src/: Makefile  module1CompensationCtrl.cc
make-version/sw/app/module1/serviceControl/module1CompensationCtrl/unitTest/: testModule1CompensationCtrl.cc  testModule1CompensationCtrl.mk
make-version/sw/app/module1/serviceControl/module1TimingPhaseCtrl/if/: module1TimingPhaseCtrlIf.cc  module1TimingPhaseCtrlIf.h
make-version/sw/app/module1/serviceControl/module1TimingPhaseCtrl/inc/: module1TimingPhaseCtrl.h
make-version/sw/app/module1/serviceControl/module1TimingPhaseCtrl/src/: Makefile  module1TimingPhaseCtrl.cc
make-version/sw/app/module1/serviceControl/module1TimingPhaseCtrl/unitTest/: testModule1TimingPhaseCtrl.cc  testModule1TimingPhaseCtrl.mk
make-version/sw/app/module1/startUp/inc/: module1StartUp.h
make-version/sw/app/module1/startUp/src/: Makefile  module1StartUp.cc
make-version/sw/app/module1/utilities/cmdHandler/src/: Makefile  cmdHandler.cc
make-version/sw/app/module1/utilities/cmdHandler/unitTest/: testCmdHandler.cc  testCmdHandler.mk
make-version/sw/app/module1/utilities/helpers/inc/: classAHelper.h
make-version/sw/app/module1/utilities/helpers/src/: Makefile
make-version/sw/app/startUp/: Makefile
make-version/sw/app/startUp/if/: startUpIf.h
make-version/sw/app/startUp/inc/: startUpImpl.h
make-version/sw/app/startUp/src/: Makefile  startUpImpl.cc
make-version/sw/make/: Makefile  Makefile.common  Makefile.config  Makefile.targets
