# Initialize `Autoconf`. Specify package's name, version & bug-report address.
AC_INIT([PackageName], [1.0], [bug-report@address])

# Initialize Automake
AM_INIT_AUTOMAKE([foreign])

# Check for a C compiler
AC_PROG_CC

# Declare config.h as output header
AC_CONFIG_HEADERS([config.h])

# Declare Makefile & src/Makefile as output files
AC_CONFIG_FILES([Makefile src/Makefile])

# Output all declared files
AC_OUTPUT