ACLOCAL_AMFLAGS = -I m4 --install

# Our target dynamic library for this module
lib_LTLIBRARIES = 

noinst_LTLIBRARIES =

# Includes header files that is interface headers which are implemented in other distributed libraries/packages
include_HEADERS = 

# Include sub-Makefile.am
include sw/Makefile.am
